--- a/src/app/pages/scheda-immobile/scheda-immobile.page.html
+++ b/src/app/pages/scheda-immobile/scheda-immobile.page.html
@@ -38,10 +38,11 @@
                                         class="button view only-icon"
                                         (click)="openModal('custom-modal-1')">&nbsp;</button></h3>
                                 <ul class="item-list half-height">
-                                    <li><span>Book Value</span><span
-                                            class="right-span">{{immobile.valore_acquisto}}</span></li>
-                                    <li><span>Valore catastale</span><span>{{immobile.valore_acquisto}}</span></li>
-                                    <li><span>Valore commerciale</span><span>-</span></li>
+                                    <li><span>Book Value</span><span class="right-span">{{immobile.valore_acquisto}}
+                                            €</span></li>
+                                    <li><span>Valore catastale</span><span>{{immobile.valore_catastale}} €</span></li>
+                                    <li><span>Valore commerciale</span><span>{{immobile.valore_commerciale}} €</span>
+                                    </li>
                                     <li><span>Rendita</span><span>{{immobile.dati_catastali ? immobile.dati_catastali.rendita : '-'}}</span>
                                     </li>
                                     <li><span>1ª casa</span><span>{{immobile.prima_casa ? 'Si' : 'No'}}</span></li>
@@ -74,7 +75,7 @@
                             </div>
                             <div class="item">
                                 <h3 class="item-title">Affitti
-                                    <span>{{immobile.affitto_dettaglio ? immobile.affitto_dettaglio.importo_mensile : '-'}}</span>
+                                    <span>{{immobile.affitto_dettaglio ? immobile.affitto_dettaglio.importo_mensile + ' €' : '-'}}</span>
                                 </h3>
                                 <ul class="item-list half-height">
                                     <li><span>Affittuario</span><span>{{immobile.affitto_dettaglio ? immobile.affitto_dettaglio.descrizione_affittuario : '-'}}</span>
